# Rk2Gg

./: CMakeLists.txt  CPack.cmake  Circle.h
.github/workflows/: CI.yml  Cpack.yml  Test.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
tests/: tests.cpp
